// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerView should render the NewAnswerForm 1`] = `
<div
  className="componentContainer"
>
  <div />
  <div
    className="componentContainer"
  >
    <div
      className="title-large-spaced"
    >
      Create an Answer
    </div>
    <form
      className="form-centered"
      onSubmit={[Function]}
    >
      <div>
        <label>
          Answer number:
        </label>
        <input
          className="inputBox"
          name="number"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        />
      </div>
      <div>
        <label>
          Answer description
        </label>
        <textarea
          className="inputBox"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        />
      </div>
      <div>
        <label>
          Correct? Yes/No:
        </label>
        <div>
          <select
            className="inputBox select-medium"
            name="correct"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option
              disabled={true}
              value=""
            >
              Select an option
            </option>
            <option
              value={true}
            >
              Yes
            </option>
            <option
              value={false}
            >
              No
            </option>
          </select>
        </div>
      </div>
      <div
        className="buttonGroup"
      >
        <button
          className="submit"
        >
          Save
        </button>
        <a
          className="cancel"
          href="/editQuestion"
          onClick={[Function]}
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`AnswerView should render the UpdateAnswerForm 1`] = `
<div
  className="componentContainer"
>
  <div />
  <div>
    <div
      className="title-large-spaced"
    >
      Edit Answer 1
    </div>
    <form
      className="form-centered"
      onSubmit={[Function]}
    >
      <div>
        <label>
          Answer number:
        </label>
        <input
          className="inputBox"
          name="number"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        />
      </div>
      <div>
        <label>
          Answer description
        </label>
        <textarea
          className="inputBox"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        />
      </div>
      <div>
        <label>
          Correct? Yes/No:
        </label>
        <div>
          <select
            className="inputBox select-medium"
            name="correct"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option
              value={true}
            >
              Yes
            </option>
            <option
              value={false}
            >
              No
            </option>
          </select>
        </div>
      </div>
      <div
        className="buttonGroup"
      >
        <button
          className="submit"
        >
          Save
        </button>
        <a
          className="cancel"
          href="/editQuestion"
          onClick={[Function]}
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;
